--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 body {
-  height: 1000px;
-  width: 500px;
-  min-height: 1000px;
-  min-width: 500px;
+	height: 550px !important;
+	width: 750px !important;
+	min-height: 550px !important;
+	min-width: 750px !important;
+}
+
+#root {
+	height: 550px;
+	width: 750px;
 }
 
 .extension-body {
-  /* display: flex; */
-  /* flex-direction: row; */
-  width: 100%;
-  height: 100%;
+	width: 750px;
+	height: 550px;
 }
