--- a/src/components/general.scss
+++ b/src/components/general.scss
@@ -91,10 +91,10 @@ body {
 }
 
 .formMaster {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	width: 100%;
+	display: block;
+	height: 500px;
+	width: 750px;
+	margin-top: 50px;
 }
 
 .formjson {
@@ -227,7 +227,8 @@ body {
 
 	.fsCodeEditor {
 		border: 1px solid #ccc;
-		height: 100%;
+		height: 102%;
+		font-size: 14px;
 	}
 
 	.loading {
@@ -327,16 +328,25 @@ body {
 // }
 
 .editorModal {
-	z-index: 10;
+	z-index: 10 !important;
+
 	.RCB-modal-body {
-		width: 90%;
-		height: 90%;
+		width: 85%;
+		height: 80%;
+
+		.RCB-modal-header {
+			margin: 0;
+			padding: 0 0 15px 0 !important;
+		}
 
 		.RCB-modal-content {
 			// height: 90%;
+			width: 100%;
+			padding: 0;
+			margin-top: 10px;
 
 			.confirm-modal-body {
-				height: 75%;
+				height: 76%;
 			}
 		}
 
