--- a/src/components/icons.scss
+++ b/src/components/icons.scss
@@ -4,7 +4,7 @@
 	overflow: scroll;
 	background: #fafbfc;
 	width: 60px;
-	height: calc(100% - 50px);
+	height: 500px;
 	align-items: center;
 	box-shadow: 0px 5px 12px rgba(23, 23, 58, 0.07);
 	z-index: 5;
@@ -15,7 +15,7 @@
 		display: block;
 		position: absolute;
 		width: 200px;
-		height: calc(100% - 50px);
+		height: 500px;
 		overflow: scroll;
 		z-index: 5;
 		transition: all 0.1s;
